# quake3-server

./: BUILD.bazel  MODULE.bazel  deps.bzl  ioq3.BUILD
.github/workflows/: publish.yml  renovate.yml  test.yml
