module(name = "quake3-server", version = "1.0")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:e1cc90d06703f5dc30ae869fbfce78fce688f21a97efecd226375233a882e62f",
    image = "gcr.io/distroless/cc",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64")

repos = use_extension("//:deps.bzl", "repos_bzlmod")
use_repo(
    repos,
    "ioq3",
    "baseq3_full",
)
