module(name = "quake3-server", version = "1.0")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:bc0f6c3bce611a0bb6784a63e4afc76816b341c9ac36d9322d7b9e5077d24d96",
    image = "gcr.io/distroless/cc",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64")

repos = use_extension("//:deps.bzl", "repos_bzlmod")
use_repo(
    repos,
    "ioq3",
    "baseq3_full",
)
